基本全部完成，加了线程控制控件，关闭时候关闭线程再关闭服务

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".RecordingService"/>
+        <service android:name=".RecordingService"
+            android:enabled="true"
+            android:exported="true"/>
     </application>
 
 </manifest>
