--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,6 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.melnykov:floatingactionbutton:1.3.0'
+    compile 'com.carlos.voiceline:mylibrary:1.0.6'
 
 }
