--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
@@ -33,5 +32,7 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.melnykov:floatingactionbutton:1.3.0'
     compile 'com.carlos.voiceline:mylibrary:1.0.6'
-
+    implementation files('libs/Msc.jar')
+    implementation files('libs/Sunflower.jar')
+    compile 'com.google.code.gson:gson:2.2.4'
 }
